// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotebookCard creates correct snapshot for Jupyer notebook type 1`] = `
<Card>
  <CardContent>
    <Image
      as="img"
      floated="right"
      size="tiny"
      src="jupyter-logo.svg"
      ui={true}
    />
    <CardHeader>
      name1
      <Icon
        as="i"
        color="blue"
        name="trash outline"
        onClick={[Function]}
        size="small"
        style={
          Object {
            "cursor": "pointer",
            "marginLeft": "5px",
          }
        }
      />
    </CardHeader>
    <CardMeta>
      Jupyter
    </CardMeta>
    <CardDescription>
      Web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text.
    </CardDescription>
  </CardContent>
  <Button
    as="button"
    disabled={false}
    fluid={true}
    onClick={[Function]}
    primary={true}
  >
    Open
  </Button>
</Card>
`;

exports[`NotebookCard creates correct snapshot for Zeppelin notebook type 1`] = `
<Card>
  <CardContent>
    <Image
      as="img"
      floated="right"
      size="tiny"
      src="zeppelin-logo.svg"
      ui={true}
    />
    <CardHeader>
      name1
      <Icon
        as="i"
        color="blue"
        name="trash outline"
        onClick={[Function]}
        size="small"
        style={
          Object {
            "cursor": "pointer",
            "marginLeft": "5px",
          }
        }
      />
    </CardHeader>
    <CardMeta>
      Zeppelin
    </CardMeta>
    <CardDescription>
      Web-based notebook that enables data-driven, interactive data analytics and collaborative documents with SQL, Scala and more.
    </CardDescription>
  </CardContent>
  <Button
    as="button"
    disabled={false}
    fluid={true}
    onClick={[Function]}
    primary={true}
  >
    Open
  </Button>
</Card>
`;

exports[`NotebookCard should provide defaults and disable the open button if no notebook is provided 1`] = `
<Card>
  <CardContent>
    <Icon
      as="i"
      name="question circle"
      size="big"
      style={
        Object {
          "float": "right",
        }
      }
    />
    <CardHeader>
      Display Name
      <Icon
        as="i"
        color="blue"
        name="trash outline"
        onClick={[Function]}
        size="small"
        style={
          Object {
            "cursor": "pointer",
            "marginLeft": "5px",
          }
        }
      />
    </CardHeader>
    <CardMeta>
      Notebook type
    </CardMeta>
    <CardDescription>
      A description of the notebook purpose
    </CardDescription>
  </CardContent>
  <Button
    as="button"
    disabled={true}
    fluid={true}
    onClick={[Function]}
    primary={true}
  >
    Open
  </Button>
</Card>
`;
